로그인 및 회원가입 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,16 @@ spring.application.name=chungmusic
 
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
+
+
+spring.jpa.generate-ddl=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:oracle:thin:@studyswh.synology.me:49154:xe
+
+spring.datasource.username=CHUNGMU
+
+spring.datasource.password=chman0918
+
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
