배포 파일 위한 수정

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
 	<description>chungs&apos;s music app</description>
 	<properties>
 		<java.version>17</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -153,6 +155,9 @@
 					</execution>
 				</executions>
 			</plugin>
+
+
+			
 
 
 		</plugins>
