--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=chungmusic
 
 
 server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
 
@@ -16,3 +17,7 @@ spring.datasource.username=CHUNGMU
 spring.datasource.password=chman0918
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.thymeleaf.prefix=classpath:/static/
+spring.mvc.view.suffix=.html
+
